# beyond_fa_rotnet

./: Dockerfile  README.md  pyproject.toml
scripts/: convert_json_to_bvalbvec.py  convert_mha_to_nifti.py  inference.py  preproc_fa.sh  run_metric.sh
